fixed manatees in art float issues so images don't overflow at bottom

--- a/css/main.css
+++ b/css/main.css
@@ -122,7 +122,6 @@ article {
 
 
 article figure {
-	float: right;
 	max-width: 100% !important; 
 	padding: 0 0 1rem 0;
 }
